# ChangeLog for net-p2p/limewire
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/limewire/ChangeLog,v 1.4 2004/08/30 15:49:54 dholm Exp $

  30 Aug 2004; David Holm <dholm@gentoo.org> limewire-4.1.4.ebuild:
  Added to ~ppc.

  19 Aug 2004; Jon Hood <squinky86@gentoo.org> limewire-4.0.8.ebuild,
  limewire-4.1.4.ebuild:
  Fixing #60866, changing LICENSE in response to upstream developer comments.

*limewire-4.1.4 (18 Aug 2004)

  18 Aug 2004; Jon Hood <squinky86@gentoo.org> limewire-4.0.8.ebuild,
  -limewire-4.1.3.ebuild, +limewire-4.1.4.ebuild:
  Version bump. I'm going to _try_ to keep up with the stable and unstable
  branches correctly now, so 4.0.8 is stable on x86.

*limewire-4.1.3 (07 Aug 2004)

*limewire-4.0.8 (07 Aug 2004)

  07 Aug 2004; Jon Hood <squinky86@gentoo.org> +metadata.xml,
  +limewire-4.0.8.ebuild, +limewire-4.1.3.ebuild:
  Initial import, closes #59742. Thanks to Ed Wiget <security@rhpstudios.com>
  (tSp in forums) for this package.
