@@ -1,13 +1,13 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/limewire/limewire-4.0.8.ebuild,v 1.5 2004/09/02 17:38:25 squinky86 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/limewire/files/main-icon.png,v 1.1 2004/09/02 17:38:25 squinky86 Exp $
 
 DESCRIPTION="Limewire Java Gnutella client"
 HOMEPAGE="http://www.limewire.com"
 SRC_URI="http://dev.gentoo.org/~squinky86/files/LimeWireLinux-${PV}.tgz"
 LICENSE="GPL-2 Apache-2.0"
 SLOT="0"
-KEYWORDS="x86"
+KEYWORDS="~x86 ~ppc"
 DEPEND="virtual/jre
 	virtual/x11"
 IUSE=""
